--- a/app/components/style.css
+++ b/app/components/style.css
@@ -10,7 +10,7 @@ html,body{
 #datasection{
     display: flex;
     width: 100%;
-    height: 75vh;
+    height: 70vh;
     position: relative;
     margin: 25px auto; 
     box-shadow: 2px 2px 2px 2px 2px blue;
@@ -20,19 +20,47 @@ html,body{
 #bottomnavbar{
     display: block;
     position: relative;
-    background-color: chartreuse;
+    background-color: rgb(87, 87, 87);
     overflow-x: hidden !important;
     margin: 0 auto; 
     width: 99%;
-    height: 15%;
+    height: 20%;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
 }
-.bar{
-    position: absolute; 
-    left: 0; 
-    bottom: 0; 
-    background-color: rgb(0, 183, 255); 
-    transition: 0.2s all ease; 
-    width: 19px;
+#Button1{
+    width: 10%;
+    align-items: center;
+    justify-content: center;
+    margin-right: 16%;
+    margin-left: 5px;
+}
+.rangebox{
+    width: 25%;
+    margin: 10px auto;
+    margin-bottom: 15px;
+}
+.buttons{
+    display: inline-block;
+    width: 45%;
+    margin: 0 auto;
+}
+.rangetitle{
+    margin-right: 50px;
+}
+button{
+    margin-top: 5px;
+    background-color: rgb(158, 143, 76);
+    outline: none;
+    border: none;
+    padding: 8px 11px;
+    border-radius: 22px;
+    color: white;
+    user-select: none;
+    border: 2px solid rgb(158, 143, 76);
+    transition: 0.3s ease all;
+}
+button:hover{
+    background-color: transparent;
+    
 }
