--- a/app/components/style.css
+++ b/app/components/style.css
@@ -12,7 +12,7 @@ html,body{
     width: 100%;
     height: 70vh;
     position: relative;
-    margin: 25px auto; 
+    margin: 60px auto 0 auto; 
     box-shadow: 2px 2px 2px 2px 2px blue;
     align-items: center;
     justify-content: center;
@@ -21,6 +21,7 @@ html,body{
     display: block;
     position: relative;
     background-color: rgb(87, 87, 87);
+    opacity: 0.8;
     overflow-x: hidden !important;
     margin: 0 auto; 
     width: 99%;
